Update css for rtl scrollbar issue

--- a/static/text.scss
+++ b/static/text.scss
@@ -71,8 +71,11 @@
 
 		&.rtl {
 			direction: rtl;
+			// Setting the padding this way hides the scroll bar by putting it behind its parent
 			padding-right: 0;
-			// padding-left: 35px;
+			padding-left: 35px;
+			position: relative;
+			left: -35px;
 
 			.drop-caps {
 				float: right;
